Adding Docker to the project and updating the swagger-output.json file and moving the sendEmail method from router to controller
